fixed overflow issues

--- a/css/home.css
+++ b/css/home.css
@@ -31,10 +31,11 @@ body
     box-sizing: border-box;
     display: flex;
     width: 25%;
-    height: 292vh;  
+    height: 300vh;  
     background-color: #78B6DF;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .element2
@@ -158,7 +159,7 @@ h1, h2, h3, h4, h5, h6
 .community-container 
 {
     position: relative;
-    width: 950px;
+    width: 900px;
     height: auto;
     color:white;
     margin-bottom: 50px;
